--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "lodash.uniqby": "^4.7.0",
     "prop-types": "^15.6.2",
     "react-fast-compare": "^3.2.0",
+    "react-jss": "^10.9.0",
     "react-transition-group": "^4.4.1",
     "tinycolor2": "^1.4.1",
     "ui-box": "^5.0.0"
@@ -172,8 +173,8 @@
       "<rootDir>/commonjs/"
     ],
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx}",
-      "!**/*.stories.{js,jsx}",
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!**/*.stories.{js,jsx,ts,tsx}",
       "!src/{constants,test,themes}/**",
       "!src/icons/generated/**"
     ]
