Unstable layout Dashboard first version deployed

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "build-esm": "BABEL_ENV=esm babel src --out-dir esm --ignore '**/stories','**/test' --source-maps inline",
     "build-umd": "rollup -c",
     "build": "yarn generate-icons && concurrently --names 'commonjs,esm,umd' 'yarn build-commonjs' 'yarn build-esm' 'yarn build-umd'",
+    "build-tsc": "tsc",
     "size": "size-limit",
     "clean": "git clean -Xdf",
     "release": "np",
@@ -103,6 +104,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^13.1.9",
+    "@types/jest": "^27.5.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "babel-core": "7.0.0-bridge.0",
@@ -135,6 +137,7 @@
     "sinon": "^8.1.0",
     "size-limit": "^4.5.0",
     "starwars-names": "^1.6.0",
+    "ts-jest": "^28.0.2",
     "tsd": "^0.19.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.43.0",
