Updated configuration files

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "build-commonjs": "BABEL_ENV=commonjs babel src --out-dir commonjs --ignore '**/stories','**/test' --source-maps inline",
     "build-esm": "BABEL_ENV=esm babel src --out-dir esm --ignore '**/stories','**/test' --source-maps inline",
     "build-umd": "rollup -c",
-    "build": "yarn generate-icons && concurrently --names 'commonjs,esm,umd' 'yarn build-commonjs' 'yarn build-esm' 'yarn build-umd'",
+    "build": "yarn generate-icons && concurrently --names 'commonjs,esm' 'yarn build-commonjs' 'yarn build-esm'",
     "build-tsc": "tsc",
     "size": "size-limit",
     "clean": "git clean -Xdf",
@@ -92,9 +92,10 @@
     "@blueprintjs/icons": "^3.31.0",
     "@reactions/component": "^2.0.2",
     "@rollup/plugin-babel": "^5.2.1",
-    "@rollup/plugin-commonjs": "^15.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^2.3.3",
+    "@rollup/plugin-typescript": "^8.3.2",
     "@size-limit/preset-big-lib": "^4.5.4",
     "@storybook/addon-essentials": "^6.0.21",
     "@storybook/addon-options": "^5.3.21",
@@ -133,6 +134,7 @@
     "react-is": "^17.0.2",
     "react-test-renderer": "^17.0.2",
     "rollup": "^2.28.2",
+    "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-terser": "^5.2.0",
     "sinon": "^8.1.0",
     "size-limit": "^4.5.0",
