Partial: Icons component

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ui-sora",
   "description": "React UI Kit by tiktax.io",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "repository": "https://github.com/TonySapa/ui-library-boilerplate.git",
@@ -35,6 +35,7 @@
     "@tonisanchez.dev/init-component": "^1.0.3",
     "@types/jest": "^27.5.1",
     "@types/react-jss": "^10.0.0",
+    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "babel-loader": "^8.2.5",
@@ -46,6 +47,7 @@
     "eslint-plugin-storybook": "^0.5.12",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
+    "react-test-renderer": "^18.2.0",
     "rollup": "^2.75.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
