--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ui-sora",
   "description": "React UI Kit by tiktax.io",
-  "version": "2.0.10",
+  "version": "2.0.13",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "repository": "https://github.com/tonysapa/ui-library-boilerplate.git",
@@ -70,6 +70,12 @@
   },
   "engines": {
     "node": ">=14"
+  },
+  "dependencies": {
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-is": "^18.1.0",
+    "react-jss": "^10.9.0"
   },
   "peerDependencies": {
     "@types/react": "^18.0.9",
